# LUM_Data_Academy

./: .gitignore  .replit  AI_Tools_for_Business_Analytics_Course.md  COURSES.md  Microsoft_Power_BI_Mastery_Course.md  Python_for_Data_Analysis_Course.md  README.md  create_detailed_content.py  create_sample_courses.py  db.sqlite3  generate_favicon.py  manage.py  pyproject.toml  replit.md  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_country_userprofile_state_city.py
accounts/templates/accounts/: instructor_dashboard.html  learner_dashboard.html  login.html  register.html  (+3 more)
attached_assets/: instructions_LUM_Data_Academy_1757610298507.docx
core/: admin.py  admin_site.py  context_processors.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_course_course_syllabus_course_estimated_hours_and_more.py  0003_aboutpage_alter_blogpost_content_and_more.py  0004_enrollment_paymentinstallment.py  0005_career_survey.py
core/templatetags/: currency_filters.py
courses/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
courses/migrations/: 0001_initial.py  0002_add_payment_notes_column.py  0002_modulecompletion_projectenrollment.py  0003_course_instructor_course_is_published.py  0004_projectenrollment_additional_links_and_more.py
emails/: admin.py  services.py  urls.py  views.py
lumdataacademy/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 404.html
templates/admin/: 404.html  base_site.html  custom_index.html  index.html
(+58 files in other folders)
