[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-ckeditor-5>=0.2.18",
    "django>=5.2.6",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "whitenoise>=6.10.0",
    "django-anymail>=13.1",
    "django-templated-email>=3.1.1",
    "html2text>=2025.4.15",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
]
